book show start

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>User info</h1>
+<p><%= image_tag current_user.get_profile_image(100,100) %></p>
+  <p>ユーザーネーム：<%= current_user.name %></p>
+  <p>introduction:<%= current_user.introduction %></p>
+  <p><%= link_to "edit", edit_user_path(current_user) %></p>
+
+<h1>New book</h1>
+<!-- form_with部分 -->
+<%= form_with model: Book.new do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Opinion</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+<% end %>
+<% @books.each do |book| %>
+  <div>
+    <p><%= image_tag user.get_profile_image(100,100) %></p>
+    <h2>Title</h2>
+    <p><%= book.title %></p>
+    <h2>Opinion</h2>
+    <p><%= book.body %></p>
+  </div>
+<% end %>
