--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -1,1 +1,18 @@
+<table class="table table-striped">
 <h1>User info</h1>
+<p><%= image_tag user.get_profile_image(100,100) %></p>
+  <p>name：<%= user.name %></p>
+  <p>introduction:<%= user.introduction %></p>
+  <p><%= link_to "edit", edit_user_path(current_user) %></p>
+
+<h1>New book</h1>
+<%= form_with model: Book.new do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Opinion</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+  <% end %>
+  </table>
