--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<%= render 'books/userinfo', user: @user %>
+<h1>Book detail</h1>
+<p><%= image_tag @user.get_profile_image(100,100) %></p>
+<p><%= link_to @user.name, user_path(@user.id) %></p>
+<p><%= @book.title %></p>
+<p><%= @book.body %></p>
+<% if @book.user == current_user %>
+<%= link_to "edit", edit_book_path(@book) %>
+<%= link_to "destroy", book_path(@book), method: :delete %>
+<% end %>
