--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<%= render 'books/userinfo', user: @user %>
+<% @users.each do |user| %>
+  <div>
+    <h2>image</h2>
+    <p><%= image_tag user.get_profile_image(100,100) %></p>
+    <h2>name</h2>
+    <p><%= user.name %></p>
+    <h2>Opinion</h2>
+    <p><%= link_to "show", user_path(user.id) %></p>
+  </div>
+<% end %>
