--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div>
+  <%= flash[:notice] %>
+</div>
+
+<%= render 'books/userinfo', user: @user %>
+<% @books.each do |book| %>
+  <div>
+    <h1>Books</h1>
+    <p><%= image_tag book.user.get_profile_image(100,100) %></p>
+    <h2>Title</h2>
+    <p><%= link_to book.title, book_path(book.id) %></p>
+    <h2>Opinion</h2>
+    <p><%= book.body %></p>
+  </div>
