--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,18 @@
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <h1>User info</h1>
+<%= form_with model: @user do |f| %>
+  <h4>Name</h4>
+  <%= f.text_field :name %>
+  <h4>introduction</h4>
+  <%= f.text_area :introduction %>
+  <label for="inputImage">ProfileImage</label>
+  <%= f.file_field :profile_image, placeholder: "profile_image", accept: "image/*" %>
+  <%= f.submit 'Update User' %>
+<% end %>
