--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,11 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <h1>Editing Book</h1>
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
@@ -8,5 +16,5 @@
 
   <%= f.submit 'Update Book' %>
   <%= link_to "show", book_path(@book.id) %>
-  <%= link_to "Bac", books_path %>
+  <%= link_to "Back", books_path %>
   <% end %>
