--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <%= render 'books/userinfo', user: @user %>
 <h1>Book detail</h1>
 <p><%= image_tag @user.get_profile_image(100,100) %></p>
