--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,14 +1,21 @@
 <div>
   <%= flash[:notice] %>
 </div>
-
-<%= render 'books/userinfo', user: @user %>
-<h1>Book detail</h1>
-<p><%= image_tag @user.get_profile_image(100,100) %></p>
-<p><%= link_to @user.name, user_path(@user.id) %></p>
-<p><%= @book.title %></p>
-<p><%= @book.body %></p>
-<% if @book.user == current_user %>
-<%= link_to "edit", edit_book_path(@book) %>
-<%= link_to "destroy", book_path(@book), method: :delete %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/userinfo', user: @user %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h1>Book detail</h1>
+      <p><%= image_tag @user.get_profile_image(100,100) %></p>
+      <p><%= link_to @user.name, user_path(@user.id) %></p>
+      <p><%= @book.title %></p>
+      <p><%= @book.body %></p>
+      <% if @book.user == current_user %>
+      <%= link_to "edit", edit_book_path(@book) %>
+      <%= link_to "destroy", book_path(@book), method: :delete %>
+        </div>
+  </div>
+</div>
 <% end %>
