--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,38 +11,31 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <%= link_to "Bookers", root_path %>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-      <li>
-        <%= link_to 'Users', users_path %>
-      </li>
-      <li>
-        <%= link_to "Home", user_path(current_user.id) %>
-      </li>
-      <li>
-        <%= link_to "Books", books_path %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Home", root_path %>
-      </li>
-      <li>
-        <%= link_to "Sign up", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Log in", new_user_session_path %>
-      </li>
-      <li>
-        <%= link_to "About", about_path %>
-      </li>
-    <% end %>
-    </header>
-    <%= yield %>
+ <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-fixed-top navbar-inverse">
+        <div class="container">
+          <nav class="nav navbar-left">
+            <span class="title"><%= link_to "Bookers", root_path %></span>
+            </nav>
+            <nav>
+              <ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+                 <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+                <li><%= link_to 'Users', users_path %></li>
+                <li><%= link_to "Home", user_path(current_user.id) %></li>
+                <li><%= link_to "Books", books_path %></li>
+              <% else %>
+                <li><%= link_to "Home", root_path %></li>
+                <li><%= link_to "About", about_path %></li>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Log in", new_user_session_path %></li>
+              <% end %>
+              </ul>
+            </nav>
+          </div>
+        </header>
+      <%= yield %>
     <footer>
       <p>CopyRight Infratop.inc</p>
     </footer>
