--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,13 +6,19 @@
     <% end %>
   </ul>
 <% end %>
-<h1>User info</h1>
-<%= form_with model: @user do |f| %>
-  <h4>Name</h4>
-  <%= f.text_field :name %>
-  <h4>introduction</h4>
-  <%= f.text_area :introduction %>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "profile_image", accept: "image/*" %>
-  <%= f.submit 'Update User' %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <h1>User info</h1>
+      <%= form_with model: @user do |f| %>
+      <h4>Name</h4>
+      <%= f.text_field :name %>
+      <h4>introduction</h4>
+      <%= f.text_area :introduction %>
+      <label for="inputImage">ProfileImage</label>
+      <%= f.file_field :profile_image, placeholder: "profile_image", accept: "image/*" %>
+      <%= f.submit 'Update User' %>
+    </div>
+  </div>
+</div>
 <% end %>
