--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,20 @@
 <div>
   <%= flash[:notice] %>
 </div>
-<%= render 'books/userinfo', user: @user %>
-<% @books.each do |book| %>
-    <h1>Books</h1>
-    <p><%= image_tag @user.get_profile_image(100,100) %></p>
-    <h2>Title</h2>
-    <p><%= link_to book.title, book_path(book.id) %></p>
-    <h2>Opinion</h2>
-    <p><%= book.body %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/userinfo', user: @user %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <% @books.each do |book| %>
+      <h1>Books</h1>
+      <h2>Title</h2>
+      <h2>Opinion</h2>
+      <p><%= image_tag @user.get_profile_image(100,100) %></p>
+      <p><%= link_to book.title, book_path(book.id) %></p>
+      <p><%= book.body %></p>
+    </div>
+  </div>
+</div>
 <% end %>
