--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,5 @@
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>error prohibited this obj from being saved
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -15,6 +15,6 @@
   <%= f.text_area :body %>
 
   <%= f.submit 'Update Book' %>
-  <%= link_to "show", book_path(@book.id) %>
+  <%= link_to "Show", book_path(@book.id) %>
   <%= link_to "Back", books_path %>
   <% end %>
