--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,10 +14,10 @@
     <div class="col-md-8 offset-md-1">
       <% @books.each do |book| %>
       <ul>
-        <p><%= image_tag book.user.get_profile_image(100,100) %></p>
+        <%= link_to image_tag(book.user.get_profile_image(100,100)), user_path(book.user) %>
         <h2>Title</h2>
-        <p><%= link_to book.title, book_path(book.id) %></p>
         <h2>Opinion</h2>
+        <p><%= link_to book.title, book_path(book.id) %></p>
         <p><%= book.body %></p>
       </ul
     </div>
