--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,8 +13,8 @@
       <p><%= @book.title %></p>
       <p><%= @book.body %></p>
       <% if @book.user == current_user %>
-      <%= link_to "edit", edit_book_path(@book) %>
-      <%= link_to "destroy", book_path(@book), method: :delete %>
+      <%= link_to "Edit", edit_book_path(@book) %>
+      <%= link_to "Destroy", book_path(@book), method: :delete %>
         </div>
   </div>
 </div>
