--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
         <p><%= image_tag user.get_profile_image(100,100) %></p>
         <h2>name</h2>
         <p><%= user.name %></p>
-        <p><%= link_to "show", user_path(user.id) %></p>
+        <p><%= link_to "Show", user_path(user.id) %></p>
       </div>
     </div>
   </div>
