--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,8 +2,8 @@
   <%= flash[:notice] %>
 </div>
 
-<h1>welcome to Bookers</h1>
-<p>In Bookers,<br>
+<h1>welcome to <i class="fa-solid fa-book"></i>Bookers</h1>
+<p>In <i class="fa-solid fa-book"></i>Bookers,<br>
 you can share and exchange your opinions , inpressions, and emotions<br>
 about various books!</p>
 <%= link_to "Log in", new_user_session_path %>
