--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,9 @@
       <h1>Books</h1>
       <h2>Title</h2>
       <h2>Opinion</h2>
-      <p><%= image_tag @user.get_profile_image(100,100) %></p>
+      <%= link_to user_path(book.user) do %>
+        <%= image_tag book.user.get_profile_image(100,100) %>
+      <% end %>
       <p><%= link_to book.title, book_path(book.id) %></p>
       <p><%= book.body %></p>
     </div>
