--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -3,7 +3,9 @@
 <p><%= image_tag user.get_profile_image(100,100) %></p>
   <p>name：<%= user.name %></p>
   <p>introduction:<%= user.introduction %></p>
-  <p><%= link_to "edit", edit_user_path(current_user) %></p>
+  <%= link_to  edit_user_path(user) do %>
+  <i class="fa-solid fa-user-gear"></i>
+  <% end %>
 
 <h1>New book</h1>
 <%= form_with model: Book.new do |f| %>
