--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -17,7 +17,7 @@
       <%= f.text_area :introduction %>
       <label for="inputImage">ProfileImage</label>
       <%= f.file_field :profile_image, placeholder: "profile_image", accept: "image/*" %>
-      <%= f.submit 'Update User' %>
+      <%= f.submit 'Update User', class: "btn btn-success" %>
     </div>
   </div>
 </div>
