--- a/app/views/books/_userinfo.html.erb
+++ b/app/views/books/_userinfo.html.erb
@@ -1,4 +1,3 @@
-<table class="table table-striped">
 <h1>User info</h1>
 <p><%= image_tag user.get_profile_image(100,100) %></p>
   <p>name：<%= user.name %></p>
@@ -14,7 +13,5 @@
 
   <h4>Opinion</h4>
   <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
+  <%= f.submit 'Create Book', class: "btn btn-success" %>
   <% end %>
-  </table>
