--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -14,7 +14,7 @@
   <h4>Opinion</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Update Book' %>
+  <%= f.submit 'Update Book', class: "btn btn-success" %>
   <%= link_to "Show", book_path(@book.id) %>
   <%= link_to "Back", books_path %>
   <% end %>
