--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
- <body class="d-flex flex-column vh-100">
+  <body class="d-flex flex-column vh-100">
     <header class="shadow-sm">
       <nav class="navbar navbar-fixed-top navbar-inverse">
         <div class="container">
@@ -26,7 +26,7 @@
                 <li><i class="fa-solid fa-book-open"></i><%= link_to "Books", books_path %></li>
                 <li><i class="fa-solid fa-right-from-bracket"></i><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
               <% else %>
-                <li><i class="fa-solid fa-house"><%= link_to "Home", root_path %></li>
+                <li><i class="fa-solid fa-house"></i><%= link_to "Home", root_path %></li>
                 <li><i class="fa-solid fa-link"></i><%= link_to "About", about_path %></li>
                 <li><i class="fa-solid fa-user-plus"></i><%= link_to "Sign up", new_user_registration_path %></li>
                 <li><i class="fa-solid fa-right-to-bracket"></i><%= link_to "Log in", new_user_session_path %></li>
